Make sure frames have been constructed before asking ESM to shift focus. b=273092 r+sr=bzbarsky